Restore goal percent formatting semantics